--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
+
+    <link
+      rel="https://cdn.rawgit.com/mfd/b366b05d1265ec42b852b7b2777d6711/raw/04f2ac0f5dcf790c097148cbe2887e798be9cb28/Muller.css" />
   </head>
   <body>
     <app-root></app-root>
